2014-09-24 Paulo Andrade <pcpa@gnu.org>

        * check/lightning.c: Add a hopefully temporary kludge to not use
	sprintf and sscanf returned by dlsym. This is required to pass
	the varargs test.

        * include/lightning/jit_private.h: Use symbolic name for first
	integer register argument, as this is different in sysv and
	win64 abi.

        * include/lightning/jit_x86.h: Add conditionals and definitions
	for Windows x64 (under __CYGWIN__ preprocessor conditional).

        * lib/jit_x86-cpu.c: Correct one instruction encoding bug, that
	was working by accident. Only use rax to rdx for some byte
	operations to work on compatibility mode (that is, to generate
	the proper encoding, instead of actually generating encoding
	for high byte registers, e.g. %bh).
	Add proper prolog and epilog for windows x64.

        * lib/jit_x86-sse.c: Correct a swapped rex prefix for float
	operations.

        * lib/jit_x86.c: Adjust to support Windows x64 abi.

	* check/check.x87.nodata.sh: New file, previously used but that
	was missing git.

2014-09-07 Paulo Andrade <pcpa@gnu.org>

	* lib/lightning.c: Mark all registers advertised as live, as
	per jit_callee_save_p as live whenever reaching a jump that
	cannot be tracked. This is a rethink of the previous commit,
	and is a better approach, otherwise there would not be much
	sense on relying on jit_callee_save_p if it could not be
	trusted.

	* check/jmpr.tst, check/jmpr.ok: New files implementing a very
	simple test case, that would actually cause an assertion on
	code before the change to only mark as live when reaching a
	jump that could not tracked, the actually advertised as callee
	save registers.

	check/Makefile.am: Update for new jmpr test case.

2014-09-01 Paulo Andrade <pcpa@gnu.org>

	* lib/lightning.c: Do not mark all registers in unknown state
	as live on jit_jmpr, or jit_jmpi to an absolute address. Instead,
	treat it as a function call, and only consider JIT_Vn registers
	as possibly live.
