@@ -3952,6 +3952,16 @@ main(int argc, char *argv[])
     int			 opt_short;
     char		 cmdline[8192];
 
+#if __WORDSIZE == 32 && defined(__CYGWIN__)
+    /* Cause a compile warning about redefinition without dllimport
+     * attribute, *but* cause correct linkage if liblightning.a is
+     * linked to binutils (that happens to have an internal
+     * getopt* implementation and an apparently conflicting
+     * optind global variable) */
+    extern int		 optind;
+    optind = 1;
+#endif
+
     progname = argv[0];
 
     init_jit(progname);
